# chess

./: .dockerignore  .gitignore  Caddyfile  README.md  cloudbuild.yaml  docker-compose.yml  fly.toml  midi_reader
.github/workflows/: release.yml
backend/: Cargo.toml  Dockerfile
backend/src/: chess.rs  game.rs  main.rs
frontend/: index.html
scripts/: run-linux.sh  run-macos.sh  run-windows.ps1
