[package]
name = "chess"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
tungstenite = "0.16"
futures-util = "0.3"
url = "2.2"
warp = "0.3"

